--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <script src="index.js"></script>
+  <script src="alt.js"></script>
   <footer class="footer">
     <ul class="list-non-bullet">
       <li class="list-item-inline"><a target="_blank" class="link" href="https://github.com/rajulkoshta"><img
